--- a/about.html
+++ b/about.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <!-- What about the CSS? -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Why I Would Love to Code</title>
+    <link rel="stylesheet" href="style.css"> <!-- Optional CSS link if needed -->
 </head>
 <body>
-    <!-- Set a page heading -->
-    <h1></h1>
-    <!-- Replace the InnerHTML text below with what is being asked for -->
-    <p>Tell Us About Yourself</p>
-    <p>Your Career Aspirations</p>
-    <p>and Your Favorite Foods</p>
-    <!-- Correct the link to the Homepage and Customize the Link Text -->
-    <a href="">https://computergally.github.io/ALLAboutIndia/</a>
+    <!-- Set a page heading -->
+    <h1>About Me</h1>
+
+    <!-- Replace the InnerHTML text below with what is being asked for -->
+    <p>I am a driven 27-year-old, Memphis born and raised, who would love to learn how to code. This new ability would change my life. I pursued years of college studying Musical Theatre and Communication.</p>
+    
+    <p>I would like to create a career for myself that challenges me and allows me to use my creativity with substance to help the world keep spinning.</p>
+    
+    <p>My favorite foods are anything made with heavy whipping cream, shrimp, or spinach.</p>
+
+    <!-- Correct the link to the Homepage and Customize the Link Text -->
+    <a href="https://computergally.github.io/ALLAboutIndia/" target="_blank">Visit My Homepage</a>
 </body>
 </html>
