--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--All about India -->
-    <title>Greetings to you! </title>
-   
-    <link rel="stylesheet" href="styles.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Customize your page title -->
+    <title>Coding Challenge</title>
+    <!-- Include the CSS file to make the page blue -->
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-    <h1>Hello World</h1>
- 
-    <a href="./about.html">Link</a>
-    <script>
-        /alert("insert custom greeting here and uncomment this line so that it runs");
-    </script>
+    <!-- Customize your greeting -->
+    <h1>Hello World</h1>
+    <!-- Customize the text on your Link -->
+    <a href="./about.html">About Me</a>
+    <script>
+        // Uncomment the line below to display a custom alert greeting
+        // alert("Hello World!");
+    </script>
 </body>
 </html>
