--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Customize your page title -->
-    <title>Coding Challenge</title>
-    <!-- Include the CSS file to make the page blue -->
+  <title>Coding Challenge</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <!-- Customize your greeting -->
-    <h1>Hello World</h1>
-    <!-- Customize the text on your Link -->
-    <a href="./about.html">About Me</a>
+  <h1>Hello!</h1>
+    <a href="https://computergally.github.io/ALLAboutIndia/" style="color: blue; text-decoration: none;">Check out this cool site!</a>
     <script>
-        // Uncomment the line below to display a custom alert greeting
-        // alert("Hello World!");
+       // alert("Hello World!");
     </script>
 </body>
 </html>
