--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Hello!</h1>
     <a href="https://computergally.github.io/ALLAboutIndia/" style="color: blue; text-decoration: none;">Check out this cool site!</a>
     <script>
-       // alert("Hello Everyone!");
+     alert("Hello Everyone!");
     </script>
 </body>
 </html>
