--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coding Challenge</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I would love to code!</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <h1>Hello!</h1>
-    <a href="https://computergally.github.io/ALLAboutIndia/" style="color: blue; text-decoration: none;">Check out this cool site!</a>
-    <script>
-     alert("Hello Everyone!");
-    </script>
+      <a href="./about.html">https://computergally.github.io/ALLAboutIndia/ style="color: blue; text-decoration: none;">Check out this cool site!</a>    <script>
+        </script>
 </body>
 </html>
