--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <title>Why I Would Love to Code</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Code Driven</h1>
   <p>I am a driven 27-year-old, Memphis born and raised, who would love to learn how to code. This new ability would change my life. I pursued years of college studying Musical Theatre and Communication.</p>
     <p>I would like to create a career for myself that challenges me and allows me to use my creativity with substance to help the world keep spinning.</p>
     <p>My favorite foods are anything made with heavy whipping cream, shrimp, or spinach.</p>
- <a  <a href="">https://computergally.github.io/ALLAboutIndia/</a>
+    <a href="Learn more">https://computergally.github.io/ALLAboutIndia/</a>
 </body>
 </html>
